--- a/siirderyasi/pom.xml
+++ b/siirderyasi/pom.xml
@@ -103,11 +103,18 @@
         <version>1.4.7</version>
     </dependency>
     
+	<!--                   *-*-*-*-*-*-*- THIS IS A SECURITY ISSIU  -*-*-*-*-*-*-* 
  	<dependency>
-        <groupId>commons-fileupload</groupId>
-        <artifactId>commons-fileupload</artifactId>
-        <version>1.2.1</version>
-    </dependency>
+		<groupId>commons-fileupload</groupId>
+		<artifactId>commons-fileupload</artifactId>
+		<version>1.2.1</version>
+	</dependency>
+	-->
+	  <dependency>
+		<groupId>commons-fileupload</groupId>
+		<artifactId>commons-fileupload</artifactId>
+		<version>1.3.3</version>
+	</dependency>
     
     <dependency>
         <groupId>commons-io</groupId>
